--- a/sandbox/3-counter-templates/src/Counter.Client/wwwroot/counter.html
+++ b/sandbox/3-counter-templates/src/Counter.Client/wwwroot/counter.html
@@ -1,4 +1,10 @@
 <div>
+    <label>
+        Step: <input type="text"  bind="${Step}" onkeydown="${KeyDown}" />
+        <span>Key: ${Key} - Key Code: ${KeyCode}</span>
+    </label>
+</div>
+<div>
     <button onclick="${Decrement}">-</button>
     <span>${Value}</span>
     <button onclick="${Increment}">+</button>
