change message parameter type

--- a/sandbox/3-counter-templates/src/Counter.Client/wwwroot/enterValues.html
+++ b/sandbox/3-counter-templates/src/Counter.Client/wwwroot/enterValues.html
@@ -1,5 +1,5 @@
 <div>
-    <label>Enter value: <input type="text" bind-onchange="${NewValue}"/></label>
+    <label>Enter value and press ENTER: <input type="text" bind-onchange="${NewValue}"/></label>
     <div><span>Entered Values:</span></div>
     ${EnterdValues}
     <div><button onclick="${ClearEnteredValues}">Clear</button></div>
