--- a/sandbox/4-enter-values/src/EnterValues.Client/wwwroot/enterValues.html
+++ b/sandbox/4-enter-values/src/EnterValues.Client/wwwroot/enterValues.html
@@ -2,10 +2,10 @@
     <label>Enter value and press ENTER: <input type="text" bind-onchange="${NewValue}"/></label>
     <div><span>Entered Values:</span></div>
     ${EnteredValues}
-    <div><button onclick="${ClearEnteredValues}">Clear</button></div>
+    <div><button onclick="${ClearValues}">Clear</button></div>
 </div>
 
-<template id="EnteredValue">
+<template id="ShowValue">
     <div>
         <span>${Value}</span>
     </div>
